fix: macOS browser open launches Finder instead of browser for OAuth URLs
Root cause: Desktop.browse(URI) on macOS sometimes interprets URLs with
special characters (?&=) as file paths, opening Finder instead of the
default browser. This affected the Microsoft OAuth authorization URL
(login.live.com/oauth20_authorize.srf?client_id=...&response_type=...).

Fix: On macOS, prefer the `open` command via ProcessBuilder (which
correctly handles URLs with special characters) over Desktop.browse().
Desktop.browse() is now only used as a fallback on macOS, and remains
the primary method on Windows/Linux where it works reliably.

Also switched fallback from Runtime.exec(String[]) to ProcessBuilder
for better error handling and process management.